fixed: Navbar overlapping & logo link

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 	width: 100%;
 	height: auto;
 	border-bottom: 1px solid #d2cbcb;
-
+	z-index: 1;
 }
 .text {
 position: center;
